added more dynamic data requests
